# julius

./: .gitignore  README.md
htdocs/: contrib.html  csrc_ipa.html  documents.html  download.html  en_index.php  history.html  index.php  juliankit.html  julicus.html  juliuskit.html  license.html  ml.html  newjulius.html  ouyoukit.html  style.css  whatis.html  whatisjulius.html
htdocs/doc/: adin.html  classngram.html  cm.html  compile-vc.html  configure.html  docstyle.css  format.html  gmm.html  grammar.html  graphout.html  install-mingw.html  install.html  iwsp.html  mic.html  module.html  multigram.html  param.html  triphone.html  visualize.html
htdocs/en/: index.html
htdocs/refman/: *.html.en  *.html.ja  00head.html.en  00head.html.ja  00tail.html  adinrec.html.en  adinrec.html.ja  adintool.html.en  adintool.html.ja  filt_head.pl  filt_man.pl  index.html.en  index.html.ja  jcontrol.html.en  jcontrol.html.ja  julian.html.en  julian.html.ja  julius.html.en  julius.html.ja  man.css  man.html  mkbingram.html.en  mkbingram.html.ja  mkbinhmm.html.en  mkbinhmm.html.ja  mkgshmm.html.en  mkgshmm.html.ja  mkss.html.en  mkss.html.ja  update_man.sh
htdocs/sapi/: index.html
htdocs/sapi/Docs/: 00readme-sapi.html  develop.html  license-ipa.htm
htdocs/sapi/JSDEV/: index.html
julius/: 00readme-ja.txt  00readme.txt  Makefile.in  Release-ja.txt  Release.txt  Sample-julian.jconf  Sample-julian.jconf.ja  Sample.jconf  Sample.jconf.ja  configure  configure.in
julius/adinrec/: Makefile.in  adinrec.c  adinrec.man  adinrec.man.ja
julius/adintool/: 00readme-ja.txt  00readme.txt  Makefile.in  adintool.c  adintool.man  adintool.man.ja
julius/gramtools/mkdfa/: mkdfa.pl.in
julius/jcontrol/: 00readme-ja.txt  00readme.txt  Makefile.in  configure  configure.in  japi.h  japi_grammar.c  japi_misc.c  jcontrol.c  jcontrol.man  jcontrol.man.ja  server.c
julius/julius/: 00readme-julian-ja.txt  00readme-julian.txt  00readme-julius-ja.txt  00readme-julius.txt  ChangeLog  ChangeLog-pre2.0  Makefile.in  acconfig.h  aclocal.m4  backtrellis.c  beam.c  beam.h  config.h.in  configure  configure.in  define.h  dfa_decode.c  extern.h  factoring_sub.c  global.h  gmm.c  graphout.c  hmm_check.c  julian.man  julian.man.ja  julius.h  julius.man  julius.man.ja  m_adin.c  m_bootup.c  m_chkparam.c  m_fusion.c  m_info.c  m_jconf.c  m_options.c  m_usage.c  main.c  misc.h  module.c  module.h  (+19 more)
julius/libsent/: Makefile.in  acconfig.h  configure  configure.in  libsent-config.in
julius/libsent/include/: jlib.h
julius/libsent/include/sent/: adin.h  config.h.in  dfa.h  gprune.h  hmm.h  htk_defs.h  htk_hmm.h  htk_param.h  machines.h  mfcc.h  ngram2.h  ptree.h  speech.h  stddefs.h  tcpip.h  util.h  vocabulary.h
julius/libsent/src/adin/: adin-cut.c  adin.c  adin_esd.c  adin_file.c  adin_mic_darwin_coreaudio.c  adin_mic_freebsd.c  adin_mic_linux_alsa.c  adin_mic_linux_oss.c  adin_mic_o2.c  adin_mic_sol2.c  adin_mic_sp.c  adin_mic_sun4.c  adin_na.c  adin_netaudio.c  adin_portaudio.c  adin_sndfile.c  adin_tcpip.c  ds48to16.c  zc-e.c  zmean.c
julius/libsent/src/adin/pa/: dsound_wrapper.c  dsound_wrapper.h  pa_dsound.c  pa_host.h  pa_lib.c  pa_trace.c  pa_trace.h  pa_win_wmme.c  pablio.c  pablio.h  portaudio.h  ringbuffer.c  ringbuffer.h
julius/libsent/src/anlz/: paramselect.c  paramtypes.c  rdparam.c  strip.c  strip_mfcc.c  wrsamp.c  wrwav.c
julius/libsent/src/dfa/: cpair.c  dfa_lookup.c  dfa_malloc.c  dfa_util.c  init_dfa.c  mkcpair.c  mkterminfo.c  rddfa.c
julius/libsent/src/hmminfo/: cdhmm.c  cdset.c  check_hmm_restriction.c  check_hmmtype.c  chkhmmlist.c  guess_cdHMM.c  hmm_lookup.c  init_phmm.c  put_htkdata_info.c  rdhmmdef.c  rdhmmdef_data.c  rdhmmdef_dens.c  rdhmmdef_options.c  rdhmmdef_regtree.c  rdhmmdef_state.c  rdhmmdef_tiedmix.c  rdhmmdef_trans.c  rdhmmdef_var.c  rdhmmlist.c  read_binhmm.c  write_binhmm.c
julius/libsent/src/libjcode/: detect.c  libjcode.c
julius/libsent/src/net/: rdwt.c  server-client.c
julius/libsent/src/ngram/: init_ngram.c  ngram_access.c  ngram_lookup.c  ngram_malloc.c  ngram_read_arpa.c  ngram_read_bin.c  ngram_util.c  ngram_write_bin.c
julius/libsent/src/phmm/: addlog.c  calc_mix.c  calc_tied_mix.c  globalvars.h  gms.c  gms_gprune.c  gprune_beam.c  gprune_common.c  gprune_heu.c  gprune_none.c  gprune_safe.c  mkwhmm.c  outprob.c  outprob_init.c  vsegment.c
julius/libsent/src/util/: aptree.c  charconv.c  charconv_iconv.c  charconv_libjcode.c  charconv_win32.c  confout.c  endian.c  gzfile.c  j_printf.c  mybmalloc.c  mymalloc.c  mystrtok.c  ptree.c  readfile.c  strcasecmp.c
julius/libsent/src/voca/: init_voca.c  voca_load_htkdict.c  voca_lookup.c  voca_malloc.c  voca_util.c
julius/libsent/src/wav2mfcc/: mfcc-core.c  para.c  ss.c  wav2mfcc-buffer.c  wav2mfcc-pipe.c
julius/mkbingram/: 00readme-ja.txt  00readme.txt  Makefile.in  mkbingram.c  mkbingram.man  mkbingram.man.ja
julius/mkbinhmm/: 00readme-ja.txt  00readme.txt  Makefile.in  mkbinhmm.c  mkbinhmm.man  mkbinhmm.man.ja
julius/mkgshmm/: 00readme-ja.txt  00readme.txt  Makefile.in  configure.in  mkgshmm.in  mkgshmm.man  mkgshmm.man.ja
julius/mkss/: 00readme-ja.txt  00readme.txt  Makefile.in  mkss.c  mkss.man  mkss.man.ja
julius/support/: build-all.sh  doxygen.conf.en.in  doxygen.conf.ja.in  doxygen.sh  doxygen_erasefilter  makeman.sh  modrev.sh  update-mantxt.sh
julius/whatsnew/: WhatsNew_3.3p4.html  WhatsNew_3.4.1.html  WhatsNew_3.4.2.html  WhatsNew_3.4.3.html  WhatsNew_3.4.html  index.html
julius/whatsnew/en/: WhatsNew_3.3p4.html  WhatsNew_3.4.1.html  WhatsNew_3.4.2.html  WhatsNew_3.4.html  index.html
juliusdoc/: Juliusbook-ja.xml  Makefile  Man_jconf.xml  Man_julius.xml  Man_julius_ja.xml  desc_adin_ja.xml  desc_am_ja.xml  desc_feature_ja.xml  desc_instance_ja.xml  desc_lm_ja.xml  desc_module_ja.xml  desc_overview_ja.xml  desc_search_ja.xml  desc_vad_ja.xml  docbook.css  license.xml  opt_am.xml  opt_am_ja.xml  opt_app.xml  opt_app_ja.xml  opt_global.xml  opt_global_ja.xml  opt_instance.xml  opt_instance_ja.xml  opt_lm.xml  opt_lm_ja.xml  opt_search.xml  opt_search_ja.xml
(+47 files in other folders)
