dnl Copyright (c) 1991-2006 Kawahara Lab., Kyoto University
dnl Copyright (c) 2000-2005 Shikano Lab., Nara Institute of Science and Technology
dnl Copyright (c) 2005-2006 Julius project team, Nagoya Institute of Technology
dnl All rights reserved
dnl
dnl $Id: configure.in,v 1.6 2006/11/10 02:27:42 sumomo Exp $
dnl
AC_INIT(Sample.jconf)
AC_CONFIG_AUX_DIR(support)
AC_CONFIG_SUBDIRS(mkgshmm gramtools jcontrol julius libsent)

dnl all configure options will be passed to all subdirectries.

AC_CANONICAL_HOST

AC_MSG_CHECKING([host specific optimization flag])
if test -z "$CFLAGS" ; then
    OPTFLAG=support/cflags.${host_cpu}-${host_vendor}-${host_os}
    if test -f "$OPTFLAG" ; then
	. $OPTFLAG
	AC_MSG_RESULT([$OPTFLAG])
    else
	AC_MSG_RESULT([no])
    fi
else
    AC_MSG_RESULT([skipped])
fi

AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PATH_PROG(RM, rm)

dnl doxygen
TOPDIR=`pwd`
AC_SUBST(TOPDIR)

AC_OUTPUT(Makefile mkbingram/Makefile mkbinhmm/Makefile adinrec/Makefile adintool/Makefile mkss/Makefile support/doxygen.conf.en support/doxygen.conf.ja)
